syntax = "proto3";

import "tensors.proto";
import "ml/common.proto";
import "config/common_config.proto";

option java_package = "org.neo4j.graphalgo.ml.model.proto";
option java_outer_classname = "LinkPredictionProto";

message LinkPredictionModelData {
  Matrix weights = 1;
  LinkFeatureCombiner linkFeatureCombiner = 2;
  int32 nodeFeatureDimension = 3;
}

enum LinkFeatureCombiner {
  L2 = 0;
  HADAMARD = 1;
  COSINE = 2;
}
